2008-08-17  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: fix a typo.

	* test/.cvsignore: add.

	* src/rb_cairo.c (Cairo::BINDINGS_VERSION): 1.7.0 -> 1.7.1.

	* Rakefile: exclude .test-result.

	* NEWS: add 1.7.0 entry. (cairo 1.7.4 is supported)

	* src/, test/: add missing version checks.

	* src/rb_cairo_font_face.c
	(cr_user_font_face_text_to_glyphs_func): set num_glyphs to -1 if
	callback isn't found.

	* src/rb_cairo_private.c (rb_cairo__glyphs_from_ruby_object)
	(rb_cairo__text_clusters_from_ruby_object): set -1 to *num_XXX
	instead of 0.

	* src/rb_cairo_text_extents.c: add Cairo::TextExtents#initialize
	and setters.

	* test/test_text_extents.rb: add.

	* src/rb_cairo_font_extents.c: add Cairo::FontExtents#initialize
	and setters.

	* test/test_font_extents.rb: add.

	* src/rb_cairo_font_face.c: add
	Cairo::UserFontFace::TextToGlyphsData#need_backward?.

	* test/test_text_to_glyphs_data.rb: add tests for
	Cairo::UserFontFace::TextToGlyphsData.

	* test/test_font_face.rb
	(FontFaceTest#test_toy_font_face_new_with_invalid_family_name):
	add a test for creating Cairo::ToyFontFace with invalid family
	name.
	(FontFaceTest#test_toy_font_face_new): add a test for creating
	Cairo::ToyFontFace with nil family name.

	* src/rb_cairo_font_face.c (cr_toy_font_face_initialize): accept nil.

	* src/rb_cairo_context.c (cr_select_font_face): make family optional.

	* test/test_context.rb
	(ContextTest#test_select_font_face),
	(ContextTest#test_select_font_face_with_invalid_family_name): add
	a test for Cairo::Context#select_font_face.

2008-08-16  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_pkg_config.rb (PkgConfigTest#test_requires_private):
	work on my environment.

	* src/lib/cairo.rb (Cairo.exit_application): add.

	* src/rb_cairo_surface.c: use rb_cairo__invoke_callback().

	* src/rb_cairo_private.c, src/rb_cairo_private.h
	(rb_cairo__invoke_callback): use rb_protect() and exit if an
	exception is raised in callback.
