@@ -79,3 +79,4 @@ Thanks
   * James Healy: reports bugs.
   * Carsten Bormann: A suggestion.
   * Davide Rambaldi: A suggestion.
+  * Yusuke ENDOH: reports a bug.
